content/consul/v1.10.x/content/commands/config/read.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Consul and the Consul logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/consul/blob/-/LICENSE

layout: commands
page_title: 'Commands: Config Read'
---

# Consul Config Read

Command: `consul config read`

The `config read` command reads the config entry specified by the given
kind and name and outputs its JSON representation. See the
[configuration entries docs](/docs/agent/config-entries) for more
details about configuration entries.

## Usage

Usage: `consul config read [options]`

#### API Options

@include 'http_api_options_client.mdx'

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

#### Config Read Options

- `-kind` - Specifies the kind of the config entry to read.

- `-name` - Specifies the name of the config entry to read. The name of the
  `proxy-defaults` config entry must be `global`, and the name of the `mesh`
  config entry must be `mesh`.

## Examples

    $ consul config read -kind service-defaults -name web
    {
        "Kind": "service-defaults",
        "Name": "web",
        "Protocol": "http",
        "CreateIndex": 13,
        "ModifyIndex": 13
    }
